--- a/stubs/resources/views/features/minicart/_products.antlers.html
+++ b/stubs/resources/views/features/minicart/_products.antlers.html
@@ -1,6 +1,6 @@
 {{ lines as="products" }}
     {{ if products.no_results }}
-        <div class="flex flex-col items-center justify-center h-full rounded-xl">
+        <div class="flex flex-col items-center justify-center mt-10 h-full rounded-xl">
             {{ svg src="orders" class="size-10" }}
             <p class="my-2">Your cart is currently empty.</p>
         </div>
