--- a/stubs/resources/views/shop/product/default/index.antlers.html
+++ b/stubs/resources/views/shop/product/default/index.antlers.html
@@ -194,6 +194,7 @@
                         discountPercentage: discountPercentage(),
                         discountAmount: discountAmount(),
                         formattedDiscountAmount: formatPrice(discountAmount()),
+                        isUniformPrice: minPrice() === maxPrice(),
                     }
                 },
                 updateCurrentVariants() {
