--- a/stubs/resources/views/shop/product/default/index.antlers.html
+++ b/stubs/resources/views/shop/product/default/index.antlers.html
@@ -284,8 +284,7 @@
                     }
 
                     if (this.isProductQtyMoreThanAvailable) {
-                        // TODO: fix this, alerts no longer exist
-                        gaia.alert({
+                        gaia.toast({
                             title: 'Not enough stock',
                             text: `Sorry, we don't have enough stock for that quantity. Please select something less than ${this.currentProduct.inventory_quantity + 1}`,
                             type: 'error'
